tests/snapshots/run_wpt_conformance__coreml_concat_two_float16_5D_tensors_of_same_others_dimensions_except_different_4th_dimension_along_axis_3.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "concat.https.any.js",
    "concat two float16 5D tensors of same others dimensions except different 4th dimension along axis 3",
    "coreml",
    "PASS",
)
